# syncthing-remarkable

./: .gitignore  CONFIG.md  LICENSE  README.md  build.sh
src/: application.qrc  config.sample.json  manifest.json
src/backend/: Cargo.toml
src/backend/src/: config.rs  filesystem.rs  installer.rs  main.rs  status_report.rs  syncthing_client.rs  systemctl.rs  systemd.rs  types.rs  updater.rs
src/backend/src/app/: event_stream.rs  mod.rs  realtime.rs  status_builder.rs
src/backend/src/app/operations/: installer_ops.rs  mod.rs  syncthing_ops.rs  systemd_ops.rs  update_ops.rs
src/backend/src/app/protocol/: messages.rs  mod.rs  requests.rs
src/backend/src/deployment/: download.rs  installer.rs  mod.rs
src/backend/src/deployment/http/: assets.rs  client.rs  mod.rs
src/backend/src/deployment/system/: architecture.rs  archive.rs  mod.rs
src/backend/src/deployment/util/: mod.rs  progress.rs
src/backend/src/deployment/workflows/: installer.rs  mod.rs  updater.rs
src/backend/src/syncthing_client/: client.rs  helpers.rs  mod.rs  queries.rs  status.rs  types.rs
src/backend/src/syncthing_client/core/: http.rs
src/backend/src/systemd/: actions.rs  client.rs  mod.rs  monitor.rs  types.rs
src/ui/: FolderListPanel.qml  HeaderBar.qml  InstallerPage.qml  PeerListPanel.qml  ServiceStatusCard.qml  SettingsOverlay.qml  StatusFooter.qml  main.qml
