[package]
name = "syncthing-monitor-backend"
version = "0.1.0"
authors = ["Paul-Vincent Roll"]
license = "MPL-2.0 license"
edition = "2021"

[dependencies]
appload-client = { git = "https://github.com/asivery/rm-appload", tag = "v0.4.0" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
flate2 = "1.0"
tar = "0.4"
