[package]
name = "syncthing-rm-appload-backend"
version = "0.3.0"
authors = ["Paul-Vincent Roll"]
license = "MPL-2.0 license"
edition = "2021"

[dependencies]
appload-client = { git = "https://github.com/asivery/rm-appload", tag = "v0.4.0" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
flate2 = "1.1"
tar = "0.4"
semver = "1.0"
zip = "6.0"
tempfile = "3.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
